--- a/package.json
+++ b/package.json
@@ -1,26 +1,26 @@
 {
-    "name": "gitbook-plugin-bulk-redirect",
-    "description": "GitBook plugin to setup bulk redirects",
+    "name": "gitbook-plugin-bulk-redirect-with-extension",
+    "description": "GitBook plugin to setup bulk redirects - This fork adds the .html extension to files generated. original at: https://github.com/getgauge-contrib/gitbook-plugin-bulk-redirect",
     "main": "index.js",
     "version": "0.2.1",
     "engines": {
         "gitbook": ">=3.0.0-pre.0"
     },
-    "homepage": "https://github.com/getgauge-contrib/gitbook-plugin-bulk-redirect",
+    "homepage": "https://github.com/fusspawn/gitbook-plugin-bulk-redirect",
     "repository": {
         "type": "git",
-        "url": "https://github.com/getgauge-contrib/gitbook-plugin-bulk-redirect.git"
+        "url": "https://github.com/fusspawn/gitbook-plugin-bulk-redirect.git"
     },
     "license": "Apache-2.0",
     "bugs": {
-        "url": "https://github.com/getgauge-contrib/gitbook-plugin-bulk-redirect/issues"
+        "url": "https://github.com/fusspawn/gitbook-plugin-bulk-redirect/issues"
     },
     "keywords": [
         "gitbook",
         "plugin"
     ],
     "author": {
-        "name": "Kaustav Das Modak",
-        "email": "kaustav.dasmodak@yahoo.co.in"
+        "name": "Paul Thornton",
+        "email": "paul@pycom.io"
     }
 }
